# gpgpua

./: .gitignore
Cours2_examples/: CMakeLists.txt  conda_env.yml  test_raw_error.cu  test_span.cu  test_span_nvtx.cu  test_span_nvtx_cub.cu  test_span_nvtx_cub_rmm.cu  test_span_nvtx_cub_rmm_pool.cu  test_span_nvtx_cub_rmm_pool_stream.cu  test_span_nvtx_cub_rmm_pool_stream_pinned.cu
Cours2_examples/reports/: test_nvtx_2.nsys-rep  test_nvtx_cub_3.nsys-rep  test_nvtx_cub_rmm_4.nsys-rep  test_nvtx_cub_rmm_pool_5.nsys-rep  test_nvtx_cub_rmm_pool_stream_6.nsys-rep  test_nvtx_cub_rmm_pool_stream_pinned_7.nsys-rep  test_raft_1.nsys-rep
project_irgpua/: CMakeLists.txt
project_irgpua/src/: buff.txt  dispatcher.hh  fix_cpu.cu  fix_gpu_handmade.cu  fix_gpu_handmade.cuh  fix_gpu_industrial.cu  fix_gpu_industrial.cuh  image.hh  main.cu  radix_sort.cu  radix_sort.cuh  radix_sort_for_colab.cu
tp_reduce_fetch_content/bench/: main.cc
tp_reduce_fetch_content/src/: to_bench.cu
tp_scan_fetch_content/bench/: main.cc
tp_scan_fetch_content/src/: to_bench.cu
